deploy/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ig-frontend
  labels:
    app: ig-frontend
spec:
  containers:
    - name: ig-frontend
      image: asia.gcr.io/my-ig-375608/ig-frontend:prod
      ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ig-frontend-service
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: ig-frontend
  type: NodePort
